--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,10 +1,10 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-client_id = "4f3aabeb21937f1c4351e6e351db0c89"
-application_url = "https://ecommerce-app-examples-verce.vercel.app/"
+client_id = "570dd80ead4538bbe2262e8eaf693274"
+application_url = "https://shopify-vercel-app-chi.vercel.app/"
 embedded = true
-name = "example-app"
-handle = "example-app222"
+name = "example-app-v2"
+handle = "example-app-v2"
 
 [webhooks]
 api_version = "2025-01"
@@ -22,7 +22,7 @@ api_version = "2025-01"
 scopes = "write_products, read_orders, write_orders"
 
 [auth]
-redirect_urls = [ "https://ecommerce-app-examples-verce.vercel.app/api/auth" ]
+redirect_urls = [ "https://shopify-vercel-app-chi.vercel.app/api/auth" ]
 
 [pos]
 embedded = false
